[package]
name = "chicon"
version = "0.1.0"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
description = "A file abstraction system for Rust"
repository = "https://github.com/bnjjj/chicon-rs"
readme = "README.md"
keywords = ["fs", "filesystem", "file", "directory", "ssh", "scp", "s3", "os", "abstraction"]
license-file = "LICENSE"
categories = ["filesystem", "development-tools", "api-bindings"]

[dependencies]
rusoto_s3 = "0.39.0"
rusoto_core = "0.39.0"
url = "1.7.2"
ssh2 = "0.3.3"
