[package]
name = "chicon"
version = "0.1.1"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
description = "A file abstraction system for Rust"
repository = "https://github.com/bnjjj/chicon-rs"
readme = "README.md"
keywords = ["fs", "filesystem", "file", "directory", "s3"]
license-file = "LICENSE"
categories = ["filesystem", "development-tools", "api-bindings"]

[dependencies]
rusoto_s3 = "0.39.0"
rusoto_core = "0.39.0"
url = "1.7.2"
ssh2 = "0.3.3"
osauth = "0.2.4"
futures = "0.1.28"
serde = "1.0.94"
chrono = { version = "0.4.7", features = ["serde"] }
tokio = "0.1.22"
env_logger = "0.6.2"
failure = "0.1.5"
